--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsnd src/server.ts"
+    "start": "tsnd --respawn --transpile-only src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
+    "eslint": "^8.50.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   },
@@ -19,6 +22,8 @@
     "apollo-server": "^3.12.1",
     "axios": "^1.5.0",
     "class-validator": "^0.14.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "graphql": "^15.8.0",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1"
