--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql": "^15.8.0",
+    "graphql-scalars": "^1.22.2",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1"
   }
