--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-PATH_API_GREENHEART="http://localhost:8080/green-heart/api"
+PATH_API_GREENHEART="http://localhost:8080/api"
 PATH_API_VIACEP="https://viacep.com.br/ws"
 AWS_API_GREENHEART="http://greenheart.servehttp.com/api"
