--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "apollo-server": "^3.12.1",
     "axios": "^1.5.0",
     "class-validator": "^0.14.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql": "^15.8.0",
