--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "graphql": "^15.8.0",
     "graphql-scalars": "^1.22.2",
     "reflect-metadata": "^0.1.13",
-    "type-graphql": "^1.1.1",
-    "fsevents": "^2.3.3"
+    "type-graphql": "^1.1.1"
   }
 }
