--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@types/graphql": "^14.5.0",
     "apollo-server": "^3.12.1",
+    "apollo-server-express": "^3.12.1",
     "axios": "^1.5.0",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
